# nikki

./: README.md
nikki-front/: package-lock.json  package.json
nikki-front/src/api/: api.ts
nikki-server/: .env.sample  Dockerfile  Pipfile  docker-compose.yml  pyproject.toml  requirements.txt
nikki-server/src/: database.py  hashing.py  main.py  models.py  oauth2.py  schemas.py  token.py
nikki-server/src/api/: blog.py  user.py
nikki-server/src/crud/: __init__.py  blog.py  user.py
nikki-server/src/database/: database.py  migrate_db.py  seed.py
nikki-server/src/database/seeding/: __init__.py  blog_seeding.py  user_seeding.py
nikki-server/src/functions/: __init__.py  blog.py  user.py
nikki-server/src/log/: __init__.py  log_util.py
nikki-server/src/routes/: auth.py  blog.py  user.py
nikki-server/src/schemas/: __init__.py  auth.py  blog.py  user.py
nikki-server/test/: conftest.py  test_blog.py  test_main.py  test_user.py
nikki-server/test/crud/: test_blog.py  test_user.py
